style: fix header logo size and vertical alignment

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -162,7 +162,10 @@ header nav[aria-expanded='true'] .nav-hamburger-icon::after {
 /* brand */
 header .nav-brand {
   grid-area: brand;
-  flex-basis: 128px;
+  flex-basis: auto;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
   font-size: var(--heading-font-size-s);
   font-weight: 700;
   line-height: 1;
@@ -173,8 +176,9 @@ header .nav-brand {
 }
 
 header nav .nav-brand img {
-  width: 160px;
-  height: auto;
+  width: auto;
+  height: 48px;
+  display: block;
 }
 
 .wehealthcare-theme header nav .nav-brand img {
